# integrasjonsprosjektgruppe7

./: .gitignore  .gitmodules  README.md  main.go
backend/: const.go  go.mod  go.sum
backend/cmd/: main.go
backend/mapboxexamples/: mapboxexamples.go
backend/request/: request.go
frontend/: CMakeLists.txt
frontend/data/shaders/: font.frag  font.vert  sprite.frag  sprite.vert
frontend/src/: main.cpp  pch.hpp
frontend/src/game/: game.cpp  game.hpp
frontend/src/game/entity/: components.hpp  ecs.hpp
frontend/src/misc/: assertions.hpp  bash_colors.hpp  logger.hpp  settings.hpp  structs.hpp  utils.hpp
frontend/src/renderer/: ebo.hpp  font_renderer.cpp  font_renderer.hpp  renderer.cpp  renderer.hpp  sprite_renderer.cpp  sprite_renderer.hpp  vao.hpp  vbo.hpp
frontend/src/renderer/shader/: shader.cpp  shader.hpp
frontend/src/renderer/texture/: texture.cpp  texture.hpp
frontend/tests/: test_ecs.cpp
